# chatbot

./: .gitignore  .pre-commit-config.yaml  README.md  docker-compose.yml  prometheus.yml
.github/workflows/: deploy.yml
backend/: Dockerfile  pyproject.toml
backend/backend/: __init__.py  server.py
backend/tests/: test_controller.py
frontend/: Dockerfile
frontend/frontend/: tg_bot.py
